--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.6",
     "@types/react": "16.8.8",
+    "@types/react-autocomplete": "^1.8.4",
     "@types/react-dom": "16.8.3",
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "eslint-plugin-react": "^7.12.4",
     "install": "^0.12.2",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "react": "^16.8.5",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
     "ts-lint": "^4.5.1",
