--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.8",
     "@types/react-autocomplete": "^1.8.4",
     "@types/react-dom": "16.8.3",
+    "@types/react-table": "^6.8.0",
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "eslint-plugin-react": "^7.12.4",
@@ -19,6 +20,7 @@
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
+    "react-table": "^6.9.2",
     "ts-lint": "^4.5.1",
     "tslint": "^5.14.0",
     "typescript": "3.3.4000"
